[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/scenes/world.gd" type="Script" id=1]
[ext_resource path="res://data/scenes/snake.gd" type="Script" id=2]
[ext_resource path="res://resource/fonts/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_color = Color( 0.607843, 0.737255, 0.0588235, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Snake" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="TickTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="FoodSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreCurrent" type="Label" parent="CanvasLayer/HUD"]
margin_left = 3.15336
margin_top = 1.78691
margin_right = 75.1534
margin_bottom = 19.7869
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.607843, 0.737255, 0.0588235, 1 )
text = "00000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickCount" type="Label" parent="CanvasLayer/HUD"]
margin_left = 121.153
margin_top = 1.78691
margin_right = 193.153
margin_bottom = 19.7869
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.607843, 0.737255, 0.0588235, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverWindow" type="ColorRect" parent="CanvasLayer/HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMessage" type="Label" parent="CanvasLayer/HUD/GameOverWindow"]
margin_left = 59.408
margin_top = 40.6504
margin_right = 141.408
margin_bottom = 58.6504
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.607843, 0.737255, 0.0588235, 1 )
text = "Game Over"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TickTimer" to="Snake" method="_on_timer_timeout"]
[connection signal="timeout" from="FoodSpawnTimer" to="Snake" method="_on_food_spawn_timer_timeout"]
